--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Olympics-Simulator.sln"
+    "dotnet.defaultSolution": "Olimpics-Simulator-Tesis.sln"
 }
